force-app/main/default/objects/EmailNotificationSetting__mdt/EmailNotificationSetting__mdt.object-meta.xml
<CustomObject>
    <label>RatingPublishNotification</label>
    <pluralLabel>RatingPublishNotifications</pluralLabel>
</CustomObject>