force-app/main/default/objects/EmailNotificationSetting__mdt/fields/EnableGoLiveNotification__c.field-meta.xml
<CustomField>
    <fullName>EnableGoLiveNotification__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EnableGoLiveNotification</label>
    <type>Checkbox</type>
</CustomField>