force-app/main/default/objects/EmailNotificationSetting__mdt/fields/EnablePublishNotification__c.field-meta.xml
<CustomField>
    <fullName>EnablePublishNotification__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EnablePublishNotification</label>
    <type>Checkbox</type>
</CustomField>