force-app/main/default/objects/EmailNotificationSetting__mdt/fields/EnableRatingBulkEmail__c.field-meta.xml
<CustomField>
    <fullName>EnableRatingBulkEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please check this field to enable bulk email functionality to the business users</description>
    <label>EnableRatingBulkEmail</label>
    <type>Checkbox</type>
</CustomField>