force-app/main/default/objects/EmailNotificationSetting__mdt/fields/LiveNotificationForRecal__c.field-meta.xml
<CustomField>
    <fullName>LiveNotificationForRecal__c</fullName>
    <defaultValue>true</defaultValue>
    <label>LiveNotificationForRecal</label>
    <type>Checkbox</type>
</CustomField>