force-app/main/default/objects/EmailNotificationSetting__mdt/fields/MyAgeCareLink__c.field-meta.xml
<CustomField>
    <fullName>MyAgeCareLink__c</fullName>
    <label>MyAgeCareLink</label>
    <length>50</length>
    <type>Text</type>
</CustomField>