force-app/main/default/objects/EmailNotificationSetting__mdt/fields/NumberOfContacts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfContacts__c</fullName>
    <defaultValue>15000</defaultValue>
    <description>Number of contacts will be used to provide contacts limit check</description>
    <label>NumberOfContacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>