force-app/main/default/objects/EmailNotificationSetting__mdt/fields/PublishNotificationForRecal__c.field-meta.xml
<CustomField>
    <fullName>PublishNotificationForRecal__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PublishNotificationForRecal</label>
    <type>Checkbox</type>
</CustomField>