force-app/main/default/objects/EmailNotificationSetting__mdt/fields/QINotifications__c.field-meta.xml
<CustomField>
    <fullName>QINotifications__c</fullName>
    <defaultValue>true</defaultValue>
    <label>QINotifications</label>
    <type>Checkbox</type>
</CustomField>