force-app/main/default/objects/EmailNotificationSetting__mdt/fields/SRRoles__c.field-meta.xml
<CustomField>
    <fullName>SRRoles__c</fullName>
    <label>SRRoles</label>
    <length>200</length>
    <type>Text</type>
</CustomField>